k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-app-ingress
  namespace: chess-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: chess-app-ip
    networking.gke.io/managed-certificates: chess-app-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: chess.axelhedman.fi
      http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: chess-backend
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: chess-frontend
                port:
                  number: 80
